--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .sass-cache/
 Gemfile.lock
+npm-debug.log
+node_modules
 bower_components/bootstrap-sass/
 bower_components/jquery/
 bower_components/requirejs/.bower.json
